--- a/css/style.css
+++ b/css/style.css
@@ -95,6 +95,7 @@ body {
     width: 35px;
     height: 35px;
     border-radius: 50%;
+    box-shadow: 0 5px 12px 1px hsl(174, 86%, 45%);;
     background-image: url(../assets/images/icon-slider.svg);
     background-repeat: no-repeat;
     background-position: center;
