--- a/css/style.css
+++ b/css/style.css
@@ -102,11 +102,6 @@ body {
     background-color: hsl(174, 86%, 45%);
 }
 
-.range::-webkit-slider-thumb:hover {
-    background-color: hsl(174, 86%, 55%);
-    cursor: grab;
-}
-
 .range::-webkit-slider-thumb:active {
     background-color: hsl(174, 86%, 30%);
     cursor: grabbing;
@@ -196,12 +191,6 @@ body {
     border-radius: 25px;
     background-color: hsl(223, 50%, 87%);
     cursor: pointer;
-}
-
-.toggle-container:hover {
-    background-color: hsl(174, 77%, 80%);
-    outline: solid 2px hsl(174, 77%, 80%);
-    transition: 1s;
 }
 
 .hidden {
@@ -305,6 +294,19 @@ body {
         align-self: flex-end;
         width: 350px;
         padding-right: 10px;
+    }
+
+    @media (hover: hover) {
+        .toggle-container:hover {
+            background-color: hsl(174, 77%, 80%);
+            outline: solid 2px hsl(174, 77%, 80%);
+            transition: 1s;
+        }
+
+        .range::-webkit-slider-thumb:hover {
+            background-color: hsl(174, 86%, 55%);
+            cursor: grab;
+        }
     }
 
     .bottom-container {
